commit all folders of all members

--- a/.gitignore
+++ b/.gitignore
@@ -51,12 +51,12 @@ Thumbs.db
 .metals/
 .vscode/
 myenv/
-jobs/anhnm1135
-jobs/dang3107
-jobs/duyanh1508
-jobs/duybb123
-jobs/felix273
-jobs/nhung268
-jobs/nhungle
-jobs/tructt321
-jobs/ynn
+# jobs/anhnm1135
+# jobs/dang3107
+# jobs/duyanh1508
+# jobs/duybb123
+# jobs/felix273
+# jobs/nhung268
+# jobs/nhungle
+# jobs/tructt321
+# jobs/ynn
